--- a/src/www/index.html
+++ b/src/www/index.html
@@ -5,10 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" type="text/javascript"></script>
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
+        
         <script src="script/app.js" type="text/javascript"></script>
-        <link href="http://srv.tiv-trendinvest.de/cdn/bootstrap-2.0.1/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="resources/css/app.css" rel="stylesheet" type="text/css" />
-        <link href="http://srv.tiv-trendinvest.de/cdn/bootstrap-2.0.1/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div class="navbar navbar-fixed-top">
